everything works, but need optimization

--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="shelooks16">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
-  <title>New document</title>
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">  -->
+  <title>~Pals birthday~</title>
 </head>
-<body>
-  <div class="intro">
-    <div class="intro-pic">
-      <p>Enjoy your time :)</p>
-      <img src="./images/me.jpg" alt="Andrei">
-    </div>
-    <div class="intro-text">
-      <h2>Welcome to Andrew's boilerplate!</h2>
-    </div>
-  </div>
 
+<body>
+  <input type="text" class="input-field" placeholder="Введи ник своего бро для поиска">
+  <ul class="pals"></ul>
   <script src="./scripts/entry.js"></script>
 </body>
+
 </html>
