--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">  -->
+  <!-- ICONS -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+  <link rel="manifest" href="./images/site.webmanifest">
+  <link rel="shortcut icon" href="./images/favicon.ico">
+  <meta name="apple-mobile-web-app-title" content="Pals Birthday">
+  <meta name="application-name" content="Pals Birthday">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="msapplication-config" content="./images/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+  <!-- TITLE -->
   <title>~Pals birthday~</title>
 </head>
 
