--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <meta name="msapplication-config" content="./images/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   <!-- TITLE -->
-  <title>~Pals birthday~</title>
+  <title>~Buddy birthday~</title>
 </head>
 
 <body>
