manifest fix; font added; gh-pages

--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,17 @@
   <meta name="description" content="shelooks16">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">  -->
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">   
   <!-- ICONS -->
   <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
-  <link rel="manifest" href="./images/site.webmanifest">
+  <link rel="manifest" href="./site.webmanifest">
   <link rel="shortcut icon" href="./images/favicon.ico">
   <meta name="apple-mobile-web-app-title" content="Pals Birthday">
   <meta name="application-name" content="Pals Birthday">
   <meta name="msapplication-TileColor" content="#2b5797">
-  <meta name="msapplication-config" content="./images/browserconfig.xml">
+  <meta name="msapplication-config" content="./browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   <!-- TITLE -->
   <title>~Buddy birthday~</title>
