--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="shelooks16">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">   
   <!-- ICONS -->
   <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
@@ -23,6 +22,7 @@
 </head>
 
 <body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
   <input type="text" class="input-field" placeholder="Введи ник своего бро для поиска">
   <ul class="pals"></ul>
   <script src="./scripts/entry.js"></script>
