--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <input type="text" class="input-field" placeholder="Введи ник своего бро для поиска">
+  <input type="text" aria-label="Search buddy here" class="input-field" placeholder="Введи ник своего бро для поиска">
   <ul class="pals"></ul>
   <script src="./scripts/entry.js"></script>
 </body>
